--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,11 @@
-/* You can add global styles to this file, and also import other style files */
+@import '~@angular/material/prebuilt-themes/deeppurple-amber.css';
 
-html, body { height: 100%; }
-body { margin: 0; font-family: 'Roboto', sans-serif; }
+body {
+  font-family: Roboto, Arial, sans-serif;
+  margin: 0;
+}
+
+.version-info {
+  font-size: 8pt;
+  float: right;
+}
