--- a/src/app/main-nav/main-nav.component.html
+++ b/src/app/main-nav/main-nav.component.html
@@ -12,6 +12,7 @@
       <a mat-list-item routerLink="/experiences">Expériences professionnelles</a>
       <a mat-list-item routerLink="/formations">Formations</a>
       <a mat-list-item routerLink="/competences">Compétences</a>
+      <a mat-list-item routerLink="/datatable">Data-table</a>
       <a mat-list-item routerLink="/others">Autres</a>
     </mat-nav-list>
   </mat-sidenav>
